feat: add swagger to driver controller
